Fix spacing and add placeholder image for choices

--- a/style.css
+++ b/style.css
@@ -73,18 +73,23 @@ body {
     background-color: #5D3F64;
     display: flex;
     justify-content: space-around;
-
     gap: 16px;
 
 }
 
 .current-choices .player-choice, .current-choices .comp-choice {
     width: 300px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    /* border: black 5px solid; */
 }
 
 .current-choices .icon
 {
-    /* background-image: url(./images/scissors.jpg); */
+    background-image: url(./images/question.png);
     width: 300px;
     height: 120px;
     background-size: contain;
